--- a/html/index.html
+++ b/html/index.html
@@ -9,8 +9,8 @@
 </head>
 <body>
   <div id="ui-box" class="hidden">
-    <h2>จัดการ Prop</h2>
-    <button id="deletePropBtn">ลบของในมือ</button>
+    <h2>เมนูลบพรอ็อพ</h2>
+    <button id="deletePropBtn">ลบพรอ็อพ</button>
     <button id="closeBtn">ปิดเมนู</button>
   </div>
 
