--- a/html/index.html
+++ b/html/index.html
@@ -2,15 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <title>Prop Manager</title>
+  <title>aes_delprop</title>
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <link href="https://fonts.googleapis.com/css2?family=Playpen+Sans+Thai&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
 </head>
 <body>
   <div id="ui-box" class="hidden">
-    <h2>เมนูลบพรอ็อพ</h2>
-    <button id="deletePropBtn">ลบพรอ็อพ</button>
+    <h2>เมนูลบพร็อพ</h2>
+    <button id="deletePropBtn">ลบพร็อพ</button>
     <button id="closeBtn">ปิดเมนู</button>
   </div>
 
